soft_render_icd: Reorder SPIR-V JIT and implement OpTypeArray and OpConstant

--- a/vulkan/soft_render_icd/renderer/spirv/meson.build
+++ b/vulkan/soft_render_icd/renderer/spirv/meson.build
@@ -1,1 +1,7 @@
-executable('jit', 'jit.cpp', 'main.cpp', cpp_args: ['-std=c++17'])
+jit_sources = files(
+    'main.cpp',
+    'jit.cpp',
+    'ops/meta_ops.cpp',
+    'ops/type_ops.cpp')
+
+executable('jit', jit_sources, cpp_args: ['-std=c++17'])
